--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@
 locale                   : "en-US"
 title                    : "Xinran Duan/ 欣然 段"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Xinran Duan"
 description              : &description "personal description"
-url                      : https://kong-johnny.github.io/xinran.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://kong-johnny.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "kong-johnny/xinran.github.io"
+repository               : "kong-johnny/kong-johnny.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
